[workspace.package]
authors = [
    "nagara Contributors <https://github.com/nagara-network>",
    "nagara Core Developers <dev@nagara.network>",
]
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/nagara-network/core"
version = "1.0.24-alpha.1"

[workspace]
resolver = "2"
members = ["apps/node", "libs/runtime"]

[patch.crates-io]
ss58-registry = { git = "https://github.com/nagara-network/ss58-registry", rev = "0542581" }

[workspace.dependencies]
nagara-core-runtime = { path = "libs/runtime" }
ss58-registry = { git = "https://github.com/nagara-network/ss58-registry", rev = "0542581", default-features = false }
