[package]
name = "nagara-core-node"
description = "nagara Network - Core Network (Blockchain) Node"
build = "build.rs"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "nagara-core-node"

[dependencies]
# App entries
clap = { version = "4.4.2", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }

# Base consensus & primitives
frame-system = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
pallet-transaction-payment = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
sc-cli = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sc-client-api = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sc-consensus = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sc-consensus-aura = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sc-consensus-grandpa = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sc-executor = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sc-network = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sc-offchain = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sc-service = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sc-telemetry = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sc-transaction-pool = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sc-transaction-pool-api = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sp-consensus-aura = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sp-consensus-grandpa = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sp-core = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sp-inherents = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sp-io = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sp-keyring = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sp-runtime = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sp-timestamp = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
ss58-registry = { workspace = true, default-features = true }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
pallet-transaction-payment-rpc = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sc-basic-authorship = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sc-rpc-api = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sp-api = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sp-block-builder = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
sp-blockchain = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
substrate-frame-rpc-system = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }
frame-benchmarking-cli = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }

# Local Dependencies
nagara-core-runtime.workspace = true

# CLI-specific dependencies
try-runtime-cli = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", optional = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
    "frame-benchmarking-cli/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "nagara-core-runtime/runtime-benchmarks",
    "sc-service/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
