[package]
authors.workspace = true
build = "build.rs"
description = "nagara Network - Core Network (Blockchain) Node"
edition.workspace = true
license.workspace = true
name = "nagara-core-node"
publish.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "nagara-core-node"

[dependencies]
# App entries
clap = { version = "4.4.2", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }

# Base consensus & primitives
frame-system = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
pallet-transaction-payment = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
sc-cli = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sc-client-api = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sc-consensus = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sc-consensus-aura = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sc-consensus-grandpa = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sc-executor = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sc-network = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sc-offchain = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sc-service = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sc-telemetry = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sc-transaction-pool = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sc-transaction-pool-api = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sp-consensus-aura = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sp-consensus-grandpa = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sp-core = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sp-inherents = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sp-io = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sp-keyring = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sp-runtime = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sp-timestamp = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
ss58-registry = { workspace = true, default-features = true }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.3", features = ["server"] }
pallet-transaction-payment-rpc = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sc-basic-authorship = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sc-rpc-api = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sp-api = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sp-block-builder = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sp-blockchain = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
substrate-frame-rpc-system = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
frame-benchmarking-cli = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }

# Local Dependencies
nagara-core-runtime.workspace = true

# CLI-specific dependencies
try-runtime-cli = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", optional = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
    "frame-benchmarking-cli/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "nagara-core-runtime/runtime-benchmarks",
    "sc-service/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
