[package]
name = "nagara-pda-files"
description = "nagara Network - Permissioned Data Access Pallet"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
codec.workspace = true
frame-support.workspace = true
frame-system.workspace = true
nagara-council-bigbrothers.workspace = true
nagara-registry-servicers.workspace = true
scale-info.workspace = true
sp-arithmetic.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "nagara-council-bigbrothers/std",
    "nagara-registry-servicers/std",
    "scale-info/std",
    "sp-arithmetic/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
