[package]
name = "nagara-registry-servicers"
description = "nagara Network - Servicer Registry Pallet"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
codec.workspace = true
frame-support.workspace = true
frame-system.workspace = true
nagara-council-bigbrothers.workspace = true
scale-info.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "nagara-council-bigbrothers/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
