[package]
name = "nagara-core-runtime"
description = "nagara Network - Core Network (Blockchain) Runtime"
build = "build.rs"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Codecs
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

# Base consensus & primitives
frame-executive = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
frame-support = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
frame-try-runtime = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false, optional = true }
pallet-aura = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
pallet-balances = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
pallet-grandpa = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
pallet-sudo = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
pallet-timestamp = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
pallet-utility = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
sp-arithmetic = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
sp-api = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
sp-block-builder = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
sp-core = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
sp-inherents = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
sp-offchain = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
sp-session = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
sp-storage = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
sp-transaction-pool = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
sp-version = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
ss58-registry = { workspace = true, default-features = false }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false, optional = true }

# ValidatorSet
substrate-validator-set = { git = "https://github.com/nagara-network/substrate-validator-set.git", rev = "50aa3cd", default-features = false }
pallet-session = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/nagara-network/polkadot-sdk.git", branch = "nagara-v1.1.0", optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system-benchmarking?/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "frame-try-runtime?/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-session/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "scale-info/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "ss58-registry/std",
    "substrate-wasm-builder",
    "substrate-validator-set/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-executive/try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "frame-try-runtime/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "sp-runtime/try-runtime",
]
experimental = ["pallet-aura/experimental"]
