[package]
name = "nagara-core-runtime"
description = "nagara Network - Core Network (Blockchain) Runtime"
build = "build.rs"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Codecs
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

# Base consensus & primitives
frame-executive = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
frame-support = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
frame-system = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
frame-try-runtime = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false, optional = true }
pallet-aura = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
pallet-balances = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
pallet-grandpa = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
pallet-sudo = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
pallet-timestamp = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
pallet-transaction-payment = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
pallet-utility = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
sp-api = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
sp-arithmetic = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
sp-block-builder = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
sp-consensus-aura = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
sp-core = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
sp-inherents = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
sp-offchain = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
sp-runtime = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
sp-session = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
sp-std = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
sp-storage = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
sp-transaction-pool = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
sp-version = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
ss58-registry = { workspace = true, default-features = false }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false, optional = true }

# ValidatorSet
pallet-session = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
substrate-validator-set = { git = "https://github.com/nagara-network/substrate-validator-set.git", branch = "nagara-v1.0.0", default-features = false }

# Smart Contracts
pallet-assets = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
pallet-contracts = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }

# Trust foundation
pallet-identity = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }
pallet-multisig = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system-benchmarking?/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "frame-try-runtime?/std",
    "pallet-assets/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts/std",
    "pallet-grandpa/std",
    "pallet-identity/std",
    "pallet-insecure-randomness-collective-flip/std",
    "pallet-multisig/std",
    "pallet-session/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "scale-info/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "ss58-registry/std",
    "substrate-validator-set/std",
    "substrate-wasm-builder",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-contracts/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
