[package]
name = "nagara-core-runtime"
description = "nagara Network - Core Network (Blockchain) Runtime"
build = "build.rs"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Codecs
codec.workspace = true
scale-info.workspace = true

# Locals
nagara-core-servicer-registry.workspace = true

# Base consensus & primitives
frame-executive.workspace = true
frame-support.workspace = true
frame-system.workspace = true
frame-try-runtime = { workspace = true, optional = true }
pallet-aura.workspace = true
pallet-balances.workspace = true
pallet-grandpa.workspace = true
pallet-sudo.workspace = true
pallet-timestamp.workspace = true
pallet-transaction-payment.workspace = true
pallet-utility.workspace = true
sp-api.workspace = true
sp-arithmetic.workspace = true
sp-block-builder.workspace = true
sp-consensus-aura.workspace = true
sp-consensus-grandpa.workspace = true
sp-core.workspace = true
sp-inherents.workspace = true
sp-offchain.workspace = true
sp-runtime.workspace = true
sp-session.workspace = true
sp-std.workspace = true
sp-storage.workspace = true
sp-transaction-pool.workspace = true
sp-version.workspace = true
ss58-registry.workspace = true

# Used for the node template's RPCs
frame-system-rpc-runtime-api.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true

# Used for runtime benchmarking
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }

# ValidatorSet
pallet-session.workspace = true
substrate-validator-set.workspace = true

# Smart Contracts
pallet-assets.workspace = true
pallet-contracts.workspace = true
pallet-contracts-primitives.workspace = true
pallet-insecure-randomness-collective-flip.workspace = true

# Trust foundation
pallet-identity.workspace = true
pallet-multisig.workspace = true

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha", optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system-benchmarking?/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "frame-try-runtime?/std",
    "nagara-core-servicer-registry/std",
    "pallet-assets/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts/std",
    "pallet-grandpa/std",
    "pallet-identity/std",
    "pallet-insecure-randomness-collective-flip/std",
    "pallet-multisig/std",
    "pallet-session/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "scale-info/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "ss58-registry/std",
    "substrate-validator-set/std",
    "substrate-wasm-builder",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-contracts/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
